[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flare_python_periphery_package"
version = "0.0.2"
authors = [{ name = "Jošt Smrtnik", email = "jost.smrtnik@gmail.com" }]
description = "Test package for flare periphery."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"


[tool.hatch.build.targets.wheel]
artifacts = ["artifacts/*.json"]
